Пользователи вроде как закончены

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,3 +7,11 @@ ru:
       sign_in_needed: Необходимо авторизоваться
   user:
     cant_create: Не правильно заданы параметры пользователя
+  action:
+    logged_in: Вошел в систему
+    logged_out: Вышел из системы
+    user:
+      update: Изменил пользователя
+      update_password: Сменил пароль пользователю
+      create: Создал пользователя
+      remove: Удалил пользователя
