--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,3 +15,6 @@ ru:
       update_password: Сменил пароль пользователю
       create: Создал пользователя
       remove: Удалил пользователя
+    client:
+      create: Создал клиента
+      remove: Удалил клиента
