Изменения для клиентов

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,4 +17,9 @@ ru:
       remove: Удалил пользователя
     client:
       create: Создал клиента
+      update: Изменил данные клиента
       remove: Удалил клиента
+    transaction:
+      create: Пополнил счет клиента
+      update: Изменил пополнение счета клиента
+      remove: Удалил пополнение счета клиента
