--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,9 +19,14 @@ ru:
       create: Создал клиента
       update: Изменил данные клиента
       remove: Удалил клиента
+      remove_width_requests: и все завяки от него
       update_permission_true: Открыл доступ к клиенту
       update_permission_false: Закрыл доступ к клиенту
     transaction:
       create: Пополнил счет клиента
       update: Изменил пополнение счета клиента
       remove: Удалил пополнение счета клиента
+    request:
+      create: Создал заявку
+      update: Изменил заявку
+      remove: Удалил заявку
